--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,16 +1,16 @@
 <% include ../partials/header-top.ejs %>
-<title>Anon. - Overview</title>
+<title>Anon. - Search</title>
 <% include ../partials/header-bottom.ejs %>
 
-<h1>Overview</h1>
-<div class="posts"></div>
+<h1>Search Results | </h1>
+<div class="searchResults"></div>
 
-</div> <!-- .content-wrapper -->
-</main> <!-- .cd-main-content -->
+</div>
+</main>
 <script src="js/sweetalert/dist/sweetwater.min.js"></script>
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.menu-aim.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="js/postsAjax.js"></script>
+<script src="js/searchAjax.js"></script>
 </body>
 </html>
