--- a/partials/header-bottom.ejs
+++ b/partials/header-bottom.ejs
@@ -25,7 +25,7 @@
 		<a href="#0" class="cd-logo"><img src="../img/cd-logo.svg" alt="Logo"></a>
 
 		<div class="cd-search is-hidden">
-			<form action="#0">
+			<form action="">
 				<input type="search" placeholder="Search..." onkeyup="showHint(this.value)">
 			</form>
 		</div> <!-- cd-search -->
