--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,8 +2,8 @@
 <title>Anon. - Search</title>
 <% include ../partials/header-bottom.ejs %>
 
-<h1>Search Results | </h1>
-<div class="searchResults"></div>
+<h1 id="searchHeader">Search Results</h1>
+<div id="searchResults"></div>
 
 </div>
 </main>
