--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,14 +3,17 @@
 <% include ../partials/header-bottom.ejs %>
 
 <h1 id="searchHeader">Search Results</h1>
+<h1 id="threadHeader">Threads</h1>
 <div id="searchResults"></div>
+<h1 id="userHeader">Users</h1>
+<div id="userResults"></div>
 
 </div>
 </main>
-<script src="js/sweetalert/dist/sweetwater.min.js"></script>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.menu-aim.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="js/searchAjax.js"></script>
+<script src="../js/sweetalert/dist/sweetwater.min.js"></script>
+<script src="../js/jquery-2.1.4.js"></script>
+<script src="../js/jquery.menu-aim.js"></script>
+<script src="../js/main.js"></script> <!-- Resource jQuery -->
+<script src="../js/searchAjax.js"></script>
 </body>
 </html>
