--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -7,10 +7,10 @@
 
 </div> <!-- .content-wrapper -->
 </main> <!-- .cd-main-content -->
-<script src="js/sweetalert/dist/sweetwater.min.js"></script>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.menu-aim.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="js/postsAjax.js"></script>
+<script src="../js/sweetalert/dist/sweetwater.min.js"></script>
+<script src="../js/jquery-2.1.4.js"></script>
+<script src="../js/jquery.menu-aim.js"></script>
+<script src="../js/main.js"></script> <!-- Resource jQuery -->
+<script src="../js/postsAjax.js"></script>
 </body>
 </html>
