Minor work on Search Bar

--- a/partials/header-bottom.ejs
+++ b/partials/header-bottom.ejs
@@ -19,14 +19,18 @@
 			xhttp.send();
 		}
 	}
+
+	function search(){
+		document.location = '/search/' + document.getElementById('searchBar').value;
+	}
 </script>
 <body>
 	<header class="cd-main-header">
 		<a href="#0" class="cd-logo"><img src="../img/cd-logo.svg" alt="Logo"></a>
 
 		<div class="cd-search is-hidden">
-			<form action="">
-				<input type="search" placeholder="Search..." onkeyup="showHint(this.value)">
+			<form onsubmit="search()">
+				<input type="search" id="searchBar" placeholder="Search..." onkeyup="showHint(this.value)">
 			</form>
 		</div> <!-- cd-search -->
 
